[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Enemies.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemies/EnemyPool.tscn" type="PackedScene" id=2]

[node name="Enemies" type="Node2D"]
script = ExtResource( 1 )

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="NoEnemiesCheckerTImer" type="Timer" parent="."]

[node name="EnemyPool" parent="." instance=ExtResource( 2 )]

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 696, 320 )

[node name="ActiveEnemyList" type="Node2D" parent="."]
